# plutus

./: cabal.project  stack.yaml
plutus-benchmark/: plutus-benchmark.cabal
plutus-core/: plutus-core.cabal
plutus-core-testlib/: plutus-core-testlib.cabal
plutus-ledger-api/: plutus-ledger-api.cabal
plutus-metatheory/: plutus-metatheory.cabal
plutus-tx/: plutus-tx.cabal
plutus-tx-plugin/: plutus-tx-plugin.cabal
plutus-tx-testlib/: plutus-tx-testlib.cabal
